; ModuleID = '/home/carl/AnghaBench/kphp-kdb/statsx/extr_statsx-log-split.c_all_counter_fits.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/statsx/extr_statsx-log-split.c_all_counter_fits.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@copy_mod = common dso_local global i32 0, align 4
@copy_rem = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @all_counter_fits(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = icmp sle i32 %3, 0
  br i1 %4, label %5, label %8

5:                                                ; preds = %1
  %6 = load i32, i32* %2, align 4
  %7 = sub nsw i32 0, %6
  store i32 %7, i32* %2, align 4
  br label %8

8:                                                ; preds = %5, %1
  %9 = load i32, i32* %2, align 4
  %10 = load i32, i32* @copy_mod, align 4
  %11 = srem i32 %9, %10
  %12 = load i32, i32* @copy_rem, align 4
  %13 = icmp eq i32 %11, %12
  %14 = zext i1 %13 to i32
  ret i32 %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
